ajout des éléments horaires, contacts et réseaux sociaux dans le footer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </body>
   <footer>
       <div class="contenu-footer">
-          <div class="blo footer-services">
+          <div class="bloc footer-services">
               <h3>Nos Services</h3>
               <ul>
                   <li><a href="#">Hebergement</a></li>
@@ -31,6 +31,37 @@
                   <li><a href="#">Start-up</a></li>
               </ul>
           </div>
+
+          <div class="bloc footer-services">
+            <h3>Restons en contact</h3>
+            <p>55-55-55-55-55</p>
+            <p>supportclient@contact.com</p>
+            </p>6 rue de l'invention, Paris VII,75007</div>p>
+        </div>
+
+        <div class="bloc footer-services">
+            <h3>Les horaires</h3>
+            <ul>
+                <li>✔️ Lun 10h-19h</li>
+                <li>✔️ Mar 10h-19h</li>
+                <li>✔️ Mer 10h-19h</li>
+                <li>✔️ Jeu 10h-19h</li>
+                <li>✔️ Ven 10h-19h</li>
+                <li>❌ Sam 10h-19h</li>
+                <li>❌ Dim 10h-19h</li>
+            </ul>
+        </div>
+
+        <div class="bloc footer-services">
+            <h3>Nos Réseaux</h3>
+            <ul>
+                <li><a href="#"><img src="medias/fb.svg" alt="icones réseaux sociaux">Facebook/monsite</a></li>
+                <li><a href="#"><img src="medias/instagram.svg" alt="icones réseaux sociaux">Instagram/monsite</a></li>
+                <li><a href="#"><img src="medias/twitter.svg" alt="icones réseaux sociaux">Twitter/monsite</a></li>
+                <li><a href="#"><img src="medias/github.svg" alt="icones réseaux sociaux">Github/monsite</a></li>
+                <li><a href="#"><img src="medias/youtube.svg" alt="icones réseaux sociaux">Youtube/monsite</a></li>
+            </ul>
+        </div>
       </div>
   </footer>
 </html>
