--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Création d'un footer</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body> 
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, culpa.</h1>
@@ -20,7 +21,7 @@
   </body>
   <footer>
       <div class="contenu-footer">
-          <div class="bloc footer-services">
+            <div class="bloc footer-services">
               <h3>Nos Services</h3>
               <ul>
                   <li><a href="#">Hebergement</a></li>
@@ -30,16 +31,16 @@
                   <li><a href="#">Finances</a></li>
                   <li><a href="#">Start-up</a></li>
               </ul>
-          </div>
+            </div>
 
-          <div class="bloc footer-services">
-            <h3>Restons en contact</h3>
-            <p>55-55-55-55-55</p>
-            <p>supportclient@contact.com</p>
-            </p>6 rue de l'invention, Paris VII,75007</div>p>
-        </div>
+            <div class="bloc footer-services">
+                <h3>Restons en contact</h3>
+                <p>55-55-55-55-55</p>
+                <p>supportclient@contact.com</p>
+                <p>6 rue de l'invention, Paris VII,75007</p>
+            </div>
 
-        <div class="bloc footer-services">
+             <div class="bloc footer-services">
             <h3>Les horaires</h3>
             <ul>
                 <li>✔️ Lun 10h-19h</li>
@@ -50,9 +51,9 @@
                 <li>❌ Sam 10h-19h</li>
                 <li>❌ Dim 10h-19h</li>
             </ul>
-        </div>
+             </div>
 
-        <div class="bloc footer-services">
+             <div class="bloc footer-services">
             <h3>Nos Réseaux</h3>
             <ul>
                 <li><a href="#"><img src="medias/fb.svg" alt="icones réseaux sociaux">Facebook/monsite</a></li>
@@ -61,7 +62,7 @@
                 <li><a href="#"><img src="medias/github.svg" alt="icones réseaux sociaux">Github/monsite</a></li>
                 <li><a href="#"><img src="medias/youtube.svg" alt="icones réseaux sociaux">Youtube/monsite</a></li>
             </ul>
-        </div>
+            </div>
       </div>
   </footer>
 </html>
