--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
               </ul>
             </div>
 
-            <div class="bloc footer-services">
+            <div class="bloc footer-contact">
                 <h3>Restons en contact</h3>
                 <p>55-55-55-55-55</p>
                 <p>supportclient@contact.com</p>
                 <p>6 rue de l'invention, Paris VII,75007</p>
             </div>
 
-             <div class="bloc footer-services">
+             <div class="bloc footer-horaires">
             <h3>Les horaires</h3>
             <ul>
                 <li>✔️ Lun 10h-19h</li>
@@ -53,7 +53,7 @@
             </ul>
              </div>
 
-             <div class="bloc footer-services">
+             <div class="bloc footer-medias">
             <h3>Nos Réseaux</h3>
             <ul>
                 <li><a href="#"><img src="medias/fb.svg" alt="icones réseaux sociaux">Facebook/monsite</a></li>
